<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_promedio">


        <ScrollView
            android:id="@+id/sv_main"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="399dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/titulo"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="40sp"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/holo_green_dark"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/documento"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/holo_green_dark"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/editTextEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edad"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/holo_green_dark"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editTextTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/holo_green_dark"
                    android:inputType="phone"/>


                <EditText
                    android:id="@+id/editTextDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/direccion"
                    android:inputType="textPersonName"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/holo_green_dark"
                     />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="50dp"
                    >

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="291dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/editTextMateria1"
                            android:layout_width="176dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"

                            android:hint="@string/materia"
                            android:inputType="textPersonName"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"/>

                        <EditText
                            android:id="@+id/editTextNota1"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"

                            android:gravity="center_horizontal"
                            android:hint="@string/nota"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="291dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="420dp">


                        <EditText
                            android:id="@+id/editTextMateria2"
                            android:layout_width="178dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:hint="@string/materia"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editTextNota2"
                            android:layout_width="113dp"
                            android:layout_height="wrap_content"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:gravity="center_horizontal"
                            android:hint="@string/nota"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="291dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/editTextMateria3"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:hint="@string/materia"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editTextNota3"
                            android:layout_width="109dp"
                            android:layout_height="wrap_content"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:gravity="center_horizontal"
                            android:hint="@string/nota"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="291dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/editTextMateria4"
                            android:layout_width="178dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:hint="@string/materia"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editTextNota4"
                            android:layout_width="113dp"
                            android:layout_height="wrap_content"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:gravity="center_horizontal"
                            android:hint="@string/nota"
                            android:inputType="numberDecimal" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="291dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/editTextMateria5"
                            android:layout_width="178dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:hint="@string/materia"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editTextNota5"
                            android:layout_width="113dp"
                            android:layout_height="wrap_content"
                            android:textStyle="normal|bold|italic"
                            android:textColor="@android:color/holo_green_dark"
                            android:gravity="center_horizontal"
                            android:hint="@string/nota"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnCalcular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="48dp"
                        android:text="@string/calcular"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/teal_700"/>

                </LinearLayout>

            </LinearLayout>

            </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/sv_main"
        >

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/regresar"
            android:backgroundTint="@color/teal_700"/>

        <TextView
            android:id="@+id/txtconcepto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"

            android:layout_marginHorizontal="15dp"
            android:textAlignment="center"
            android:layout_marginBottom="300dp"
            android:text="@string/concepto" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

